# WhisperWorld-C

./: .clang-format  .gitignore  CMakeLists.txt  README.md  list.c  list.h  main.c  makefile
cmake/: Dependencies.cmake
include/: list.h  serialization.h
src/: CMakeLists.txt  client.c  list.c  serialization.c  server.c
tests/: CMakeLists.txt  test_list.c
